--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.5.0"
   }
 }
